<resources>
    <string name="app_name">ChatGPT</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="add_new_chat_btn">新增对话</string>
    <string name="clear_conversations_btn">清除所有对话</string>
    <string name="rename_et">请输入名称</string>
    <string name="msg_left_tv_content_description">显示ChatGPT回复信息的TextView</string>
    <string name="send_msg_et_hint">发送一条消息...</string>
    <string name="send_msg_btn">发送</string>
    <string name="bg_tv">ChatGPT</string>

    <string name="api_key">你的API key</string>

    <string name="font_size_title">字体大小</string>

    <string name="enable_continuous_conversation_title">开启连续对话功能</string>
    <string name="summary_on">ChatGPT根据当前问题及历史问答进行回复，对之前的问答具有记忆功能</string>
    <string name="summary_off">ChatGPT只根据当前问题进行回复，对之前的问答没有记忆功能</string>

    <string name="temperature">模型参数temperature（默认为10）</string>
    <string name="temp_summary">较高的值（如8）将使回复更加随机，而较低的值（如 2）将使回复更加集中和确定</string>
</resources>